--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
